--- a/Templates/home.html
+++ b/Templates/home.html
@@ -73,7 +73,7 @@
                         <div class="message-body is-small">
                             <p><strong>KEEP IN MIND: </strong>In the actual stage application is highly incomplete, suppose to deliver simple swiss-system pairing only!
                                 Maybe in the future versions functionality is going to be enlarged.</p>
-                            <p><strong>WARNING: </strong>App is <strong>not</strong> secured in any of kind (availability, integrity, authentication), that is why use it is for non commercial (professional)!</p>
+                            <p><strong>WARNING: </strong>App is <strong>not</strong> secured in any of kind (availability, integrity, authentication), that is why please use it in non commercial (professional) events!</p>
                             <p><strong>THE MOST IMPORTANT:</strong>If app worked as You expected 😅, please, have fun in Your private tournaments!</p>
                         </div>
                     </article>
@@ -84,11 +84,11 @@
                             <p>To begin please select Your tournament. Click <button class="js-modal-trigger tag is-success is-small" id="action-start" data-target="popup_create_open" @click="getFiles" style="border-style: none;">OPEN</button> and.. </p>
                             <li>choose existing file name to continue (or just read) written tournament</li>
                             <li>type new file name to begin another tournament</li>
-                            <p>Than add Players which are going to parcitipate and compete for championship 🏆. If the list includes all Players, start the tournament.</p>
-                            <p>Do not forget to select presumed round quantity and right system. <strong>Actual supported is pairing system is swiss!</strong></p>
-                            <p>Every round can be viewed (with onging - with/without results) and every table in actual round can be set (with results:<span class="tag is-success is-light">1</span>, <span class="tag is-warning is-light">½</span>, <span class="tag is-danger is-light">0</span>).</p>
-                            <p>Any time You need to close the application, You can just do it. To switch between tournaments, there is a need to close actual one by <button class="tag is-danger" style="border-style: none;" disabled>CLOSE</button> and open interested one.</p>
-                            <p>When tournament reach last round, the next one will not be paired. All the results may be read in view "Results".</p>
+                            <p>Than add Players to the list who are going to parcitipate and compete for championship 🏆. If the list includes all Players, start the tournament.</p>
+                            <p>Do not forget to select presumed round quantity and right pairing system. <strong>Actual supported one is swiss!</strong></p>
+                            <p>Every round can be viewed (with ongoing results) and every result in actual round can be set (with:<span class="tag is-success is-light">+1</span>, <span class="tag is-warning is-light">+½</span>, <span class="tag is-danger is-light">+0</span>).</p>
+                            <p>Any time You need to close the application, You can just do it. To switch between tournaments and close actual, just click <button class="tag is-danger" style="border-style: none;" disabled>CLOSE</button> and open interested one.</p>
+                            <p>When tournament reach the last round, click for "Next round" yo finish. All the results may be read in view "Results".</p>
                         </div>
                     </article>
                 </div>
